--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-pandas
-sqlite3  # built-in, tetap cantumkan jika perlu
-requests
+streamlit==1.37.0
+pandas==2.2.2
+requests==2.32.3
+scikit-learn==1.4.2
+joblib==1.4.2
